--- a/sphere_rep.html
+++ b/sphere_rep.html
@@ -12,7 +12,7 @@ vec3  cPos = vec3(0.0, 0.0, 2.0);
 const float sphereSize = 1.0;
 const vec3 lightDir = vec3(-0.577, 0.577, 0.577);
 
-vec3 trans(vec3 p){
+vec3 repetition(vec3 p){
     return mod(p, 4.0) - 2.0;
 }
 
