--- a/iron.html
+++ b/iron.html
@@ -3,29 +3,32 @@ uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
 
-const float PI = 3.14159265358979323846;
+float onRep(vec2 p, float interval) {
+  return mod(p, interval) - interval * 0.5;
+}
+
+float distBar(vec2 p, float interval, float width) {
+  return length(max(abs(onRep(p, interval)) - width, 0.0));
+}
+
+float distTube(vec2 p, float interval, float width) {
+  return length(onRep(p, interval)) - width;
+}
 
 // distance function
 float distFunc(vec3 p){
-  vec3 c = vec3(1.0, 1.0, 1.0);
-  float d2 = distFuncSphere(onRep(p,c));
+  float bar_x = distBar(p.yz, 1.0, 0.1);
+  float bar_y = distBar(p.xz, 1.0, 0.1);
+  float bar_z = distBar(p.xy, 1.0, 0.1);
 
-  float bar_interval = 1.0;
-  float bar_width = 0.1;
-  float bar_x = length(max(abs(mod(p.yz, bar_interval) - bar_interval * 0.5) - bar_width, 0.0));
-  float bar_y = length(max(abs(mod(p.xz, bar_interval) - bar_interval * 0.5) - bar_width, 0.0));
-  float bar_z = length(max(abs(mod(p.xy, bar_interval) - bar_interval * 0.5) - bar_width, 0.0));
-
-  float tube_interval = 0.1;
-  float tube_width = 0.025;
-  float tube_x = length(mod(p.yz, tube_interval) - tube_interval * 0.5) - tube_width;
-  float tube_y = length(mod(p.xz, tube_interval) - tube_interval * 0.5) - tube_width;
-  float tube_z = length(mod(p.xy, tube_interval) - tube_interval * 0.5) - tube_width;
+  float tube_x = distTube(p.yz, 0.1, 0.025);
+  float tube_y = distTube(p.xz, 0.1, 0.025);
+  float tube_z = distTube(p.xy, 0.1, 0.025);
 
   return max(max(max(min(min(bar_x, bar_y),bar_z), -tube_x), -tube_y), -tube_z);
 }
 
-vec3 genNormal(vec3 p){
+vec3 getNormal(vec3 p){
   float d = 0.0001;
   return normalize(vec3(
     distFunc(p + vec3(  d, 0.0, 0.0)) - distFunc(p + vec3( -d, 0.0, 0.0)),
@@ -46,29 +49,30 @@ void main(void){
   float targetDepth = 1.0;
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
+  // direction light
   vec3 lightDir = normalize(vec3(1, 1, -2));
 
   // marching loop
-  float tmp, dist;
-  tmp = 0.0;
+  float depth, dist;
+  depth = 0.0;
   vec3 dPos = cPos;
   for(int i = 0; i < 64; i++){
     dist = distFunc(dPos);
-    tmp += dist;
-    dPos = cPos + tmp * ray;
+    depth += dist;
+    dPos = cPos + depth * ray;
     if (abs(dist) <= 0.001) break;
   }
 
   // hit check
   vec3 color;
   if(abs(dist) < 0.001){
-    vec3 normal = genNormal(dPos);
+    vec3 normal = getNormal(dPos);
     float diff = clamp(dot(lightDir, normal), 0.1, 1.0);
     color = vec3(1.0, 0.1, 0.1) * diff;
   }else{
     color = vec3(0.0);
   }
-  gl_FragColor = vec4(color + 0.05 * tmp, 1.0);
+  gl_FragColor = vec4(color + 0.05 * depth, 1.0);
 }
 </script><!-- /fragment shader -->
 
