--- a/iron.html
+++ b/iron.html
@@ -16,7 +16,7 @@ float distTube(vec2 p, float interval, float width) {
 }
 
 // distance function
-float distFunc(vec3 p){
+float distScene(vec3 p){
   float bar_x = distBar(p.yz, 1.0, 0.1);
   float bar_y = distBar(p.xz, 1.0, 0.1);
   float bar_z = distBar(p.xy, 1.0, 0.1);
@@ -31,9 +31,9 @@ float distFunc(vec3 p){
 vec3 getNormal(vec3 p){
   float d = 0.0001;
   return normalize(vec3(
-    distFunc(p + vec3(  d, 0.0, 0.0)) - distFunc(p + vec3( -d, 0.0, 0.0)),
-    distFunc(p + vec3(0.0,   d, 0.0)) - distFunc(p + vec3(0.0,  -d, 0.0)),
-    distFunc(p + vec3(0.0, 0.0,   d)) - distFunc(p + vec3(0.0, 0.0,  -d))
+    distScene(p + vec3(  d, 0.0, 0.0)) - distScene(p + vec3( -d, 0.0, 0.0)),
+    distScene(p + vec3(0.0,   d, 0.0)) - distScene(p + vec3(0.0,  -d, 0.0)),
+    distScene(p + vec3(0.0, 0.0,   d)) - distScene(p + vec3(0.0, 0.0,  -d))
   ));
 }
 
@@ -42,7 +42,7 @@ void main(void){
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
   // camera and ray
-  vec3 cPos = vec3(0.0,  0.0,  0.0 + time);
+  vec3 cPos = vec3(0.0, 0.0, time);
   vec3 cDir = normalize(vec3(0.1, 0.1, 1.0));
   vec3 cUp  = normalize(vec3(0.1, 0.4, 0.0));
   vec3 cSide = cross(cDir, cUp);
@@ -53,19 +53,20 @@ void main(void){
   vec3 lightDir = normalize(vec3(1, 1, -2));
 
   // marching loop
-  float depth, dist;
-  depth = 0.0;
+  float dist;
+  float depth = 0.0;
+  float eps = 0.001;
   vec3 dPos = cPos;
   for(int i = 0; i < 64; i++){
-    dist = distFunc(dPos);
+    dist = distScene(dPos);
     depth += dist;
     dPos = cPos + depth * ray;
-    if (abs(dist) <= 0.001) break;
+    if (abs(dist) <= eps) break;
   }
 
   // hit check
   vec3 color;
-  if(abs(dist) < 0.001){
+  if(abs(dist) < eps){
     vec3 normal = getNormal(dPos);
     float diff = clamp(dot(lightDir, normal), 0.1, 1.0);
     color = vec3(1.0, 0.1, 0.1) * diff;
