--- a/rebar.html
+++ b/rebar.html
@@ -62,15 +62,15 @@ void main(void){
     dist = distScene(dPos);
     depth += dist;
     dPos = cPos + depth * ray;
-    if (abs(dist) <= eps) break;
+    if (abs(dist) < eps) break;
   }
 
   // hit check
   vec3 color;
   if(abs(dist) < eps){
     vec3 normal = getNormal(dPos);
-    float diff = clamp(dot(lightDir, normal), 0.1, 1.0);
-    color = vec3(1.0, 0.1, 0.1) * diff;
+    float diffuse = clamp(dot(lightDir, normal), 0.1, 1.0);
+    color = vec3(1.0, 0.1, 0.1) * diffuse;
   }else{
     color = vec3(0.0);
   }
@@ -97,7 +97,7 @@ void main(void){
     box-shadow: 0px 0px 0px 1px gray;
   }
 </style>
-<title>wgld.org WebGL sample 085</title>
+<title>Rebar</title>
 </head>
 <body>
   <canvas id="canvas"></canvas>
