--- a/sphere_basic.html
+++ b/sphere_basic.html
@@ -4,7 +4,6 @@ uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
 
-
 float distSphere(vec3 p, float r) {
   return length(p) - r;
 }
@@ -24,10 +23,9 @@ void main(void) {
   vec3 cUp  = normalize(vec3(0, 1, 0));
   vec3 cSide = cross(cDir, cUp);
   float targetDepth = 1.0;
-  vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
-  // direction light
-  vec3 lightDir = normalize(vec3(-1, 2, -1));
+  // ray
+  vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
   // marching loop
   float dist;
