--- a/sphere_basic.html
+++ b/sphere_basic.html
@@ -36,7 +36,7 @@ void main(void) {
     dist = distScene(dPos);
     depth += dist;
     dPos = cPos + depth * ray;
-    if (abs(dist) <= eps) break;
+    if (abs(dist) < eps) break;
   }
 
   // hit check
