--- a/rebar_threejs.html
+++ b/rebar_threejs.html
@@ -20,7 +20,7 @@ float distTube(vec2 p, float interval, float width) {
 }
 
 // distance function
-float distScene(vec3 p){
+float distScene(vec3 p) {
   float bar_x = distBar(p.yz, 1.0, 0.1);
   float bar_y = distBar(p.xz, 1.0, 0.1);
   float bar_z = distBar(p.xy, 1.0, 0.1);
@@ -32,7 +32,7 @@ float distScene(vec3 p){
   return max(max(max(min(min(bar_x, bar_y),bar_z), -tube_x), -tube_y), -tube_z);
 }
 
-vec3 getNormal(vec3 p){
+vec3 getNormal(vec3 p) {
   float d = 0.0001;
   return normalize(vec3(
     distScene(p + vec3(  d, 0.0, 0.0)) - distScene(p + vec3( -d, 0.0, 0.0)),
@@ -41,7 +41,7 @@ vec3 getNormal(vec3 p){
   ));
 }
 
-void main(void){
+void main(void) {
   // fragment position
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
@@ -70,11 +70,11 @@ void main(void){
 
   // hit check
   vec3 color;
-  if(abs(dist) < eps){
+  if(abs(dist) < eps) {
     vec3 normal = getNormal(dPos);
     float diffuse = clamp(dot(lightDir, normal), 0.1, 1.0);
     color = vec3(1.0, 0.1, 0.1) * diffuse;
-  }else{
+  } else {
     color = vec3(0.0);
   }
   gl_FragColor = vec4(color + 0.05 * depth, 1.0);
@@ -82,7 +82,7 @@ void main(void){
 </script>
 
 <script id="vertex_shader" type="x-shader/x-vertex">
-void main(void){
+void main(void) {
   gl_Position = vec4(position, 1.0);
 }
 </script>
@@ -102,8 +102,8 @@ function init() {
   geometry = new THREE.PlaneBufferGeometry(2.0, 2.0);
   material = new THREE.ShaderMaterial({
     uniforms: {
-      time: { type: "f", value: null },
-      resolution: { type: "v2", value: null }
+      time: { type: "f" },
+      resolution: { type: "v2" }
     },
     vertexShader: document.getElementById('vertex_shader').textContent,
     fragmentShader: document.getElementById('fragment_shader').textContent
