--- a/tours.html
+++ b/tours.html
@@ -4,37 +4,26 @@ uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
 
-const vec3 cPos = vec3(0.0,  0.0,  3.0);
-const vec3 cDir = vec3(0.0,  0.0, -1.0);
-const vec3 cUp  = vec3(0.0,  1.0,  0.0);
-
-const vec3 lightDir = vec3(-0.57, 0.57, 0.57);
-
-// torus distance function
-float distFuncTorus(vec3 p){
-  vec2 t = vec2(0.75, 0.25);
-  vec2 r = vec2(length(p.xy) - t.x, p.z);
-  return length(r) - t.y;
+float distSphere(vec3 p, float r) {
+  return length(p) - r;
 }
 
-// floor distance function
-float distFuncFloor(vec3 p){
-  return dot(p, vec3(0.0, 1.0, 0.0)) + 1.0;
+float distTorus(vec3 p, vec2 t) {
+  vec2 q = vec2(length(p.xz)-t.x,p.y);
+  return length(q)-t.y;
 }
 
 // distance function
-float distFunc(vec3 p){
-  float d1 = distFuncTorus(p);
-  float d2 = distFuncFloor(p);
-  return min(d1, d2);
+float distScene(vec3 p){
+  return distTorus(p, vec2(1, 0.1));
 }
 
-vec3 genNormal(vec3 p){
+vec3 getNormal(vec3 p){
   float d = 0.0001;
   return normalize(vec3(
-    distFunc(p + vec3(  d, 0.0, 0.0)) - distFunc(p + vec3( -d, 0.0, 0.0)),
-    distFunc(p + vec3(0.0,   d, 0.0)) - distFunc(p + vec3(0.0,  -d, 0.0)),
-    distFunc(p + vec3(0.0, 0.0,   d)) - distFunc(p + vec3(0.0, 0.0,  -d))
+    distScene(p + vec3(  d, 0.0, 0.0)) - distScene(p + vec3( -d, 0.0, 0.0)),
+    distScene(p + vec3(0.0,   d, 0.0)) - distScene(p + vec3(0.0,  -d, 0.0)),
+    distScene(p + vec3(0.0, 0.0,   d)) - distScene(p + vec3(0.0, 0.0,  -d))
   ));
 }
 
@@ -43,26 +32,34 @@ void main(void){
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
   // camera and ray
+  vec3 cPos = vec3(0.0, 0.0, -2.0);
+  vec3 cDir = normalize(vec3(0, 1, 1));
+  vec3 cUp  = normalize(vec3(0, 1, 0));
   vec3 cSide = cross(cDir, cUp);
   float targetDepth = 1.0;
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
+  // direction light
+  vec3 lightDir = normalize(vec3(-1, 2, -1));
+
   // marching loop
-  float tmp, dist;
-  tmp = 0.0;
+  float dist;
+  float depth = 0.0;
+  float eps = 0.001;
   vec3 dPos = cPos;
-  for(int i = 0; i < 256; i++){
-    dist = distFunc(dPos);
-    tmp += dist;
-    dPos = cPos + tmp * ray;
+  for(int i = 0; i < 6; i++){
+    dist = distScene(dPos);
+    depth += dist;
+    dPos = cPos + depth * ray;
+    if (abs(dist) < eps) break;
   }
 
   // hit check
   vec3 color;
-  if(abs(dist) < 0.001){
-    vec3 normal = genNormal(dPos);
-    float diff = clamp(dot(lightDir, normal), 0.1, 1.0);
-    color = vec3(1.0, 1.0, 1.0) * diff;
+  if(abs(dist) < eps){
+    vec3 normal = getNormal(dPos);
+    float diffuse = clamp(dot(lightDir, normal), 0.1, 1.0);
+    color = vec3(1.0, 1.0, 1.0) * diffuse;
   }else{
     color = vec3(0.0);
   }
@@ -89,9 +86,10 @@ void main(void){
     box-shadow: 0px 0px 0px 1px gray;
   }
 </style>
-<title>wgld.org WebGL sample 084</title>
+<title>wgld.org WebGL sample 085</title>
 </head>
 <body>
   <canvas id="canvas"></canvas>
   <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
+  <p><input type="button" value="save image" onclick="saveImage();"></p>
 </body></html>
