--- a/sphere_diffuse.html
+++ b/sphere_diffuse.html
@@ -1,5 +1,5 @@
 <html><head><!-- fragment shader --><script id="fs" type="x-shader/x-fragment">
-precision mediump float;
+precision highp float;
 uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
