--- a/tours.html
+++ b/tours.html
@@ -9,13 +9,13 @@ float distSphere(vec3 p, float r) {
 }
 
 float distTorus(vec3 p, vec2 t) {
-  vec2 q = vec2(length(p.xz)-t.x,p.y);
-  return length(q)-t.y;
+  vec2 r = vec2(length(p.xy) - t.x, p.z);
+  return length(r) - t.y;
 }
 
 // distance function
 float distScene(vec3 p){
-  return distTorus(p, vec2(1, 0.1));
+  return distTorus(p, vec2(1.2, 0.4));
 }
 
 vec3 getNormal(vec3 p){
@@ -33,14 +33,14 @@ void main(void){
 
   // camera and ray
   vec3 cPos = vec3(0.0, 0.0, -2.0);
-  vec3 cDir = normalize(vec3(0, 1, 1));
+  vec3 cDir = normalize(vec3(0, 0, 1));
   vec3 cUp  = normalize(vec3(0, 1, 0));
   vec3 cSide = cross(cDir, cUp);
   float targetDepth = 1.0;
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
   // direction light
-  vec3 lightDir = normalize(vec3(-1, 2, -1));
+  vec3 lightDir = normalize(vec3(-1, 2, -1.5));
 
   // marching loop
   float dist;
