--- a/sphere_basic.html
+++ b/sphere_basic.html
@@ -1,5 +1,8 @@
-<html><head><!-- fragment shader --><script id="fs" type="x-shader/x-fragment">
-precision mediump float;
+<html>
+  <head><title>Raymarching Sphere Basic</title></head>
+  <body>
+<script id="fragment_shader" type="x-shader/x-fragment">
+precision highp float;
 uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
@@ -8,26 +11,24 @@ float distSphere(vec3 p, float r) {
   return length(p) - r;
 }
 
-// distance function
+// 距離関数
 float distScene(vec3 p) {
   return distSphere(p, 1.3);
 }
 
 void main(void) {
-  // fragment position
+  // gl_FragCoord`のxとyの座標を -1.0〜1.0 に正規化する
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
-  // camera and ray
+  // カメラとレイの定義
   vec3 cPos = vec3(0.0, 0.0, -2.0);
   vec3 cDir = normalize(vec3(0, 0, 1));
   vec3 cUp  = normalize(vec3(0, 1, 0));
   vec3 cSide = cross(cDir, cUp);
   float targetDepth = 1.0;
-
-  // ray
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
-  // marching loop
+  // 距離関数を用いたレイのマーチングループ
   float dist;
   float depth = 0.0;
   float eps = 0.001;
@@ -39,40 +40,61 @@ void main(void) {
     if (abs(dist) < eps) break;
   }
 
-  // hit check
+  // 衝突判定の結果に応じたピクセル色の決定
   vec3 color;
-  if(abs(dist) < eps){
+  if(abs(dist) < eps) {
     color = vec3(1.0, 1.0, 1.0);
   } else {
     color = vec3(0.0);
   }
   gl_FragColor = vec4(color, 1.0);
 }
-</script><!-- /fragment shader -->
+</script>
 
-<!-- vertex shader --><script id="vs" type="x-shader/x-vertex">
-attribute vec3 position;
-
-void main(void){
+<script id="vertex_shader" type="x-shader/x-vertex">
+void main(void) {
   gl_Position = vec4(position, 1.0);
 }
-</script><!-- /vertex shader -->
+</script>
 
-<script src="script.js" type="text/javascript"></script>
-<style type="text/css">
-  * {
-    text-align: center;
-    margin: 10px auto;
-    padding: 0px;
-  }
-  canvas {
-    box-shadow: 0px 0px 0px 1px gray;
-  }
-</style>
-<title>Sphere Basic</title>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
-  <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
-  <p><input type="button" value="save image" onclick="saveImage();"></p>
-</body></html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+var scene, camera, renderer;
+var geometry, material, mesh;
+
+init();
+animate();
+
+function init() {
+  scene = new THREE.Scene();
+  camera = new THREE.Camera();
+
+  geometry = new THREE.PlaneBufferGeometry(2.0, 2.0);
+  material = new THREE.ShaderMaterial({
+    uniforms: {
+      time: { type: "f" },
+      resolution: { type: "v2" }
+    },
+    vertexShader: document.getElementById('vertex_shader').textContent,
+    fragmentShader: document.getElementById('fragment_shader').textContent
+  });
+  mesh = new THREE.Mesh(geometry, material);
+  scene.add(mesh);
+
+  renderer = new THREE.WebGLRenderer();
+  renderer.setSize(512.0, 512.0);
+
+  document.body.appendChild(renderer.domElement);
+}
+
+function animate(dt) {
+  requestAnimationFrame(animate);
+
+  material.uniforms.time.value = dt;
+  material.uniforms.resolution.value = new THREE.Vector2(512.0, 512.0);
+
+  renderer.render(scene, camera);
+}
+</script>
+</body>
+</html>
