--- a/combine_union.html
+++ b/combine_union.html
@@ -7,10 +7,16 @@ uniform vec2 resolution;
 float distBox(vec3 p, vec3 b, float r){
   return length(max(abs(p) - b, 0.0)) - r;
 }
+float distSphere(vec3 p, vec3 c, float r) {
+  return length(p - c) - r;
+}
 
 // distance function
 float distScene(vec3 p){
-  return distBox(p, vec3(0.9, 0.3, 0.9), 0.05);
+  return min(
+    distBox(p, vec3(0.9, 0.3, 0.9), 0.05), 
+    distSphere(p, vec3(0.0, 0.3, 0.0), 0.9)
+  );
 }
 
 vec3 getNormal(vec3 p){
@@ -27,8 +33,8 @@ void main(void){
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
   // camera and ray
-  vec3 cPos = vec3(0.0, 0.9, -2.0);
-  vec3 cDir = normalize(vec3(0.0, -0.6, 1));
+  vec3 cPos = vec3(0.0, 1.6, -2.0);
+  vec3 cDir = normalize(vec3(0.0, -0.9, 1));
   vec3 cUp  = normalize(vec3(0, 1, 0));
   vec3 cSide = cross(cDir, cUp);
   float targetDepth = 1.0;
@@ -42,7 +48,7 @@ void main(void){
   float depth = 0.0;
   float eps = 0.001;
   vec3 dPos = cPos;
-  for(int i = 0; i < 32; i++){
+  for(int i = 0; i < 100; i++){
     dist = distScene(dPos);
     depth += dist;
     dPos = cPos + depth * ray;
