--- a/combine_intersection.html
+++ b/combine_intersection.html
@@ -16,7 +16,7 @@ float distSphere(vec3 p, vec3 c, float r) {
 
 // distance function
 float distScene(vec3 p){
-  return min(
+  return max(
     distBox(p, vec3(0.9, 0.45, 0.9), 0.05), 
     distSphere(p, vec3(0.0, 0.45, 0.0), 0.9)
   );
