--- a/combine_substraction_b.html
+++ b/combine_substraction_b.html
@@ -16,8 +16,8 @@ float distSphere(vec3 p, vec3 c, float r) {
 
 // distance function
 float distScene(vec3 p){
-  return min(
-    distBox(p, vec3(0.9, 0.45, 0.9), 0.05), 
+  return max(
+    -distBox(p, vec3(0.9, 0.45, 0.9), 0.05), 
     distSphere(p, vec3(0.0, 0.45, 0.0), 0.9)
   );
 }
