--- a/rebar.html
+++ b/rebar.html
@@ -1,4 +1,7 @@
-<html><head><!-- fragment shader --><script id="fs" type="x-shader/x-fragment">
+<html>
+  <head><title>Raymarching Sample</title></head>
+  <body>
+<script id="fragment_shader" type="x-shader/x-fragment">
 precision mediump float;
 uniform float time;
 uniform vec2 mouse;
@@ -43,7 +46,7 @@ void main(void){
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
   // camera and ray
-  vec3 cPos = vec3(0.0, 0.0, time);
+  vec3 cPos = vec3(0.0, 0.0, time * 0.001);
   vec3 cDir = normalize(vec3(0.1, 0.1, 1.0));
   vec3 cUp  = normalize(vec3(0.1, 0.4, 0.0));
   vec3 cSide = cross(cDir, cUp);
@@ -76,31 +79,16 @@ void main(void){
   }
   gl_FragColor = vec4(color + 0.05 * depth, 1.0);
 }
-</script><!-- /fragment shader -->
+</script>
 
-<!-- vertex shader --><script id="vs" type="x-shader/x-vertex">
-  attribute vec3 position;
-
-void main(void){
+<script id="vertex_shader" type="x-shader/x-vertex">
+void main(void) {
   gl_Position = vec4(position, 1.0);
 }
-</script><!-- /vertex shader -->
+</script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
-<style type="text/css">
-  * {
-    text-align: center;
-    margin: 10px auto;
-    padding: 0px;
-  }
-  canvas {
-    box-shadow: 0px 0px 0px 1px gray;
-  }
-</style>
-<title>Rebar</title>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
-  <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
-  <p><input type="button" value="save image" onclick="saveImage();"></p>
-</body></html>
+<p><input type="button" value="save image" onclick="saveImage();"></p>
+</body>
+</html>
