--- a/rebar.html
+++ b/rebar.html
@@ -47,8 +47,8 @@ void main(void){
 
   // camera and ray
   vec3 cPos = vec3(0.0, 0.0, time * 0.001);
-  vec3 cDir = normalize(vec3(0.1, 0.1, 1.0));
   vec3 cUp  = normalize(vec3(0.1, 0.4, 0.0));
+  vec3 cDir = cross(cUp, vec3(-1.0, 0.0, 0.0));
   vec3 cSide = cross(cDir, cUp);
   float targetDepth = 1.0;
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
