--- a/box.html
+++ b/box.html
@@ -1,19 +1,22 @@
-<html><head><!-- fragment shader --><script id="fs" type="x-shader/x-fragment">
+<html>
+  <head><title>Raymarching Sample</title></head>
+  <body>
+<script id="fragment_shader" type="x-shader/x-fragment">
 precision highp float;
 uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
 
+// distance function
 float distBox(vec3 p, vec3 b, float r){
   return length(max(abs(p) - b, 0.0)) - r;
 }
 
-// distance function
 float distScene(vec3 p){
-  return distBox(p, vec3(0.9, 0.3, 0.9), 0.05);
+  return distBox(p, vec3(0.9, 0.6, 0.7), 0.1);
 }
 
-vec3 getNormal(vec3 p){
+vec3 getNormal(vec3 p) {
   float d = 0.0001;
   return normalize(vec3(
     distScene(p + vec3(  d, 0.0, 0.0)) - distScene(p + vec3( -d, 0.0, 0.0)),
@@ -22,20 +25,20 @@ vec3 getNormal(vec3 p){
   ));
 }
 
-void main(void){
+void main(void) {
   // fragment position
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
   // camera and ray
-  vec3 cPos = vec3(0.0, 0.9, -2.0);
-  vec3 cDir = normalize(vec3(0.0, -0.6, 1));
-  vec3 cUp  = normalize(vec3(0, 1, 0));
+  vec3 cPos = vec3(0.0, 1.6, -2.0);
+  vec3 cDir = normalize(vec3(0.0, -0.9, 1.0));
+  vec3 cUp  = cross(cDir, vec3(1.0, 0.0 ,0.0));
   vec3 cSide = cross(cDir, cUp);
-  float targetDepth = 1.0;
+  float targetDepth = 1.3;
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
   // direction light
-  vec3 lightDir = normalize(vec3(-3, 3, -2));
+  vec3 lightDir = normalize(vec3(-3, 5, -2));
 
   // marching loop
   float dist;
@@ -56,35 +59,20 @@ void main(void){
     float diffuse = clamp(dot(lightDir, normal), 0.1, 1.0);
     color = vec3(1.0, 1.0, 1.0) * diffuse;
   } else {
-    color = vec3(0.0);
+    color = vec3(1.0);
   }
   gl_FragColor = vec4(color, 1.0);
 }
-</script><!-- /fragment shader -->
+</script>
 
-<!-- vertex shader --><script id="vs" type="x-shader/x-vertex">
-  attribute vec3 position;
-
-void main(void){
+<script id="vertex_shader" type="x-shader/x-vertex">
+void main(void) {
   gl_Position = vec4(position, 1.0);
 }
-</script><!-- /vertex shader -->
+</script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
-<style type="text/css">
-  * {
-    text-align: center;
-    margin: 10px auto;
-    padding: 0px;
-  }
-  canvas {
-    box-shadow: 0px 0px 0px 1px gray;
-  }
-</style>
-<title>wgld.org WebGL sample 085</title>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
-  <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
-  <p><input type="button" value="save image" onclick="saveImage();"></p>
-</body></html>
+<p><input type="button" value="save image" onclick="saveImage();"></p>
+</body>
+</html>
