--- a/sphere_diffuse.html
+++ b/sphere_diffuse.html
@@ -7,11 +7,11 @@ uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
 
+// distance function
 float distSphere(vec3 p, float r) {
   return length(p) - r;
 }
 
-// distance function
 float distScene(vec3 p) {
   return distSphere(p, 1.3);
 }
@@ -30,15 +30,15 @@ void main(void) {
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
   // camera and ray
-  vec3 cPos = vec3(0.0, 0.0, -2.0);
-  vec3 cDir = normalize(vec3(0, 0, 1));
-  vec3 cUp  = normalize(vec3(0, 1, 0));
+  vec3 cPos = vec3(0.0, 1.6, -2.0);
+  vec3 cDir = normalize(vec3(0.0, -0.9, 1.0));
+  vec3 cUp  = cross(cDir, vec3(1.0, 0.0 ,0.0));
   vec3 cSide = cross(cDir, cUp);
-  float targetDepth = 1.0;
+  float targetDepth = 1.3;
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
   // direction light
-  vec3 lightDir = normalize(vec3(-3, 3, -2));
+  vec3 lightDir = normalize(vec3(-3, 5, -2));
 
   // marching loop
   float dist;
