--- a/sphere.html
+++ b/sphere.html
@@ -7,7 +7,7 @@ uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
 
-// distance function
+// 距離関数
 float distSphere(vec3 p, float r) {
   return length(p) - r;
 }
@@ -16,6 +16,7 @@ float distScene(vec3 p) {
   return distSphere(p, 1.3);
 }
 
+// 法線の計算
 vec3 getNormal(vec3 p) {
   float d = 0.0001;
   return normalize(vec3(
@@ -26,10 +27,10 @@ vec3 getNormal(vec3 p) {
 }
 
 void main(void) {
-  // fragment position
+  // gl_FragCoord のxy座標の -1.0〜1.0 への正規化
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
-  // camera and ray
+  // カメラとレイの定義
   vec3 cPos = vec3(0.0, 1.6, -2.0);
   vec3 cDir = normalize(vec3(0.0, -0.9, 1.0));
   vec3 cUp  = cross(cDir, vec3(1.0, 0.0 ,0.0));
@@ -37,10 +38,7 @@ void main(void) {
   float targetDepth = 1.3;
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
 
-  // direction light
-  vec3 lightDir = normalize(vec3(-3, 5, -2));
-
-  // marching loop
+  // 距離関数を用いたレイのマーチングループ
   float dist;
   float depth = 0.0;
   float eps = 0.001;
@@ -52,7 +50,8 @@ void main(void) {
     if (abs(dist) < eps) break;
   }
 
-  // hit check
+  // 衝突判定の結果に応じたピクセル色の決定
+  vec3 lightDir = normalize(vec3(-3, 5, -2));
   vec3 color;
   if(abs(dist) < eps) {
     vec3 normal = getNormal(dPos);
