--- a/box.html
+++ b/box.html
@@ -8,12 +8,12 @@ uniform vec2 mouse;
 uniform vec2 resolution;
 
 // distance function
-float distBox(vec3 p, vec3 b, float r){
-  return length(max(abs(p) - b, 0.0)) - r;
+float distBox(vec3 p, vec3 b){
+  return length(max(abs(p) - b, 0.0));
 }
 
 float distScene(vec3 p){
-  return distBox(p, vec3(0.9, 0.6, 0.7), 0.1);
+  return distBox(p, vec3(0.9, 0.6, 0.7));
 }
 
 vec3 getNormal(vec3 p) {
