--- a/rebar.html
+++ b/rebar.html
@@ -2,7 +2,7 @@
   <head><title>Raymarching Sample</title></head>
   <body>
 <script id="fragment_shader" type="x-shader/x-fragment">
-precision mediump float;
+precision highp float;
 uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
