--- a/floor.html
+++ b/floor.html
@@ -1,5 +1,8 @@
-<html><head><!-- fragment shader --><script id="fs" type="x-shader/x-fragment">
-      precision mediump float;
+<html>
+  <head><title>Raymarching Sample</title></head>
+  <body>
+<script id="fragment_shader" type="x-shader/x-fragment">
+precision mediump float;
 uniform float time;
 uniform vec2  mouse;
 uniform vec2  resolution;
@@ -70,30 +73,16 @@ void main(void){
     gl_FragColor = vec4(vec3(0.0), 1.0);
   }
 }
-</script><!-- /fragment shader -->
+</script>
 
-<!-- vertex shader --><script id="vs" type="x-shader/x-vertex">
-attribute vec3 position;
-
-void main(void){
+<script id="vertex_shader" type="x-shader/x-vertex">
+void main(void) {
   gl_Position = vec4(position, 1.0);
 }
-</script><!-- /vertex shader -->
+</script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
-<style type="text/css">
-  * {
-    text-align: center;
-    margin: 10px auto;
-    padding: 0px;
-  }
-  canvas {
-    box-shadow: 0px 0px 0px 1px gray;
-  }
-</style>
-<title>wgld.org WebGL sample 078</title>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
-  <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
-</body></html>
+<p><input type="button" value="save image" onclick="saveImage();"></p>
+</body>
+</html>
