リファクタリング

--- a/sphere.html
+++ b/sphere.html
@@ -6,6 +6,8 @@ precision highp float;
 uniform float time;
 uniform vec2 resolution;
 
+const float EPS = 0.001;
+
 // 距離関数
 float distSphere(vec3 p, float r) {
   return length(p) - r;
@@ -17,11 +19,10 @@ float distScene(vec3 p) {
 
 // 法線の計算
 vec3 getNormal(vec3 p) {
-  float d = 0.0001;
   return normalize(vec3(
-    distScene(p + vec3(  d, 0.0, 0.0)) - distScene(p + vec3( -d, 0.0, 0.0)),
-    distScene(p + vec3(0.0,   d, 0.0)) - distScene(p + vec3(0.0,  -d, 0.0)),
-    distScene(p + vec3(0.0, 0.0,   d)) - distScene(p + vec3(0.0, 0.0,  -d))
+    distScene(p + vec3(  EPS, 0.0, 0.0)) - distScene(p + vec3( -EPS, 0.0, 0.0)),
+    distScene(p + vec3(0.0,   EPS, 0.0)) - distScene(p + vec3(0.0,  -EPS, 0.0)),
+    distScene(p + vec3(0.0, 0.0,   EPS)) - distScene(p + vec3(0.0, 0.0,  -EPS))
   ));
 }
 
@@ -30,9 +31,9 @@ void main(void) {
   vec2 p = (gl_FragCoord.xy * 2.0 - resolution) / min(resolution.x, resolution.y);
 
   // カメラとレイの定義
-  vec3 cPos = vec3(0.0, 1.6, -2.0);
-  vec3 cDir = normalize(vec3(0.0, -0.9, 1.0));
-  vec3 cUp  = cross(cDir, vec3(1.0, 0.0 ,0.0));
+  vec3 cPos  = vec3(0.0, 1.6, -2.0);
+  vec3 cDir  = normalize(vec3(0.0, -0.9, 1.0));
+  vec3 cUp   = cross(cDir, vec3(1.0, 0.0 ,0.0));
   vec3 cSide = cross(cDir, cUp);
   float targetDepth = 1.3;
   vec3 ray = normalize(cSide * p.x + cUp * p.y + cDir * targetDepth);
@@ -40,19 +41,18 @@ void main(void) {
   // 距離関数を用いたレイのマーチングループ
   float dist;
   float depth = 0.0;
-  float eps = 0.001;
   vec3 dPos = cPos;
-  for(int i = 0; i < 32; i++){
+  for (int i = 0; i < 32; i++) {
     dist = distScene(dPos);
     depth += dist;
     dPos = cPos + depth * ray;
-    if (abs(dist) < eps) break;
+    if (abs(dist) < EPS) break;
   }
 
   // 衝突判定の結果に応じたピクセル色の決定
   vec3 lightDir = normalize(vec3(-3, 5, -2));
   vec3 color;
-  if(abs(dist) < eps) {
+  if (abs(dist) < EPS) {
     vec3 normal = getNormal(dPos);
     float diffuse = clamp(dot(lightDir, normal), 0.1, 1.0);
     color = vec3(1.0, 1.0, 1.0) * diffuse;
