iOSで動作するように修正

--- a/reflect.html
+++ b/reflect.html
@@ -13,7 +13,8 @@
     
     const float EPS = 0.01;
     const float PADDING = EPS * 100.0;
-    const vec3 lightDir = normalize(vec3(-3, 5, -2));
+    // normalize(vec3(-3, 5, -2))
+    const vec3 lightDir = vec3(-0.48666426339228763, 0.8111071056538127, -0.3244428422615251);
     
     // distance functions
     vec3 onRep(vec3 p, float interval) {
