Qiitaの解説記事のリンクをはった

--- a/reflect.html
+++ b/reflect.html
@@ -178,6 +178,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5.1/dat.gui.min.js"></script>
     <script src="script_datgui.js" type="text/javascript"></script>
 
-    <p>Reflect - raymarching in realtime on Three.js by <a href="https://twitter.com/gam0022">@gam0022</a>.</p>
+    <p>Reflect - <a href="http://qiita.com/gam0022/items/03699a07e4a4b5f2d41f">Raymarching in realtime on Three.js</a> by <a href="https://twitter.com/gam0022">@gam0022</a>.
+    </p>
   </body>
 </html>
