最終的な clamp 処理を追加

--- a/reflect.html
+++ b/reflect.html
@@ -170,7 +170,7 @@
           break;
         }
       }
-      gl_FragColor = vec4(color, 1.0);
+      gl_FragColor = vec4(clamp(color, 0.0, 1.0), 1.0);
     }
     </script>
     
