--- a/reflect.html
+++ b/reflect.html
@@ -186,6 +186,7 @@ http://opensource.org/licenses/mit-license.php
     </script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r14/Stats.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5.1/dat.gui.min.js"></script>
     <script src="script_datgui.js" type="text/javascript"></script>
 
