Comment out: renderer.setPixelRatio

--- a/reflect.html
+++ b/reflect.html
@@ -293,7 +293,7 @@
 				scene.add( mesh );
 
 				renderer = new THREE.WebGLRenderer();
-				renderer.setPixelRatio( window.devicePixelRatio );
+				//renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( 512, 512 );
 
 				canvas = renderer.domElement;
